--- a/view/Start.view.xml
+++ b/view/Start.view.xml
@@ -9,7 +9,7 @@
 	>
 	<!-- <mvc:XMLView viewName="com.dla.webstat.view.statistics.Heatmap" id="heatmap"/> -->
 		<!-- <wt:HeatmapListControl></wt:HeatmapListControl> -->
-	<!-- <l:Grid defaultSpan="L3 M4 S6" class="sapUiSmallMarginTop">
+	<l:Grid defaultSpan="L3 M4 S6" class="sapUiSmallMarginTop">
 		<l:content>
 		  
 			<StandardListItem
@@ -21,8 +21,9 @@
 					<l:GridData span="L12 M12 S12" />
 				</layoutData>
 			</StandardListItem>
-
-			<StandardListItem
+			<wt:HeatmapListControl 	title="Job 15"
+				description="Payroll" />
+			<!-- <StandardListItem
 				title="Job 15"
 				description="Payroll" />
 			<StandardListItem
@@ -57,12 +58,12 @@
 			</StandardListItem>
 			<StandardListItem
 				title="Job 93"
-				description="Log cleanup" />
+				description="Log cleanup" /> -->
 		</l:content>
-	</l:Grid> -->
+	</l:Grid>
 
 
-	<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Heatmap" subheader="Daily Usage" press="onTileButtonClicked">
+	<!-- <GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Heatmap" subheader="Daily Usage" press="onTileButtonClicked">
 		<TileContent>
 			    <core:Icon
 					src="sap-icon://heatmap-chart" 
@@ -93,8 +94,63 @@
 				/>
 				 <mvc:XMLView viewName="com.dla.webstat.view.statistics.Bar"/> 
 		</TileContent>
-	</GenericTile>
+	</GenericTile> -->
 
+	<!-- <l:Grid binding="{/InformationCollection}" hSpacing="0"
+		defaultSpan="XL6 L6 M6 S12" class="sapUiSmallMargin">
+		<l:VerticalLayout class="sapUiTinyMarginEnd">
+		
+			<Title level="H1" titleStyle="H1" text="Demo App"
+				class="sapUiMediumMarginBottom" />
+			<Text text="{0/introText1}" class="sapUiTinyMarginBottom" />
+			<Text text="{0/introText2}" class="sapUiTinyMarginBottom" />
+			<Text text="{0/introText3}" class="sapUiTinyMarginBottom" />
+		</l:VerticalLayout>
+		<Image src="resources/sap/ui/demokit/demoapps/img/demoAppsTeaser.png"
+			densityAware="false" width="100%">
+			<layoutData>
+				<l:GridData visibleOnSmall="false" />
+			</layoutData>
+		</Image>
+	</l:Grid>
+
+	<l:Grid hSpacing="0" vSpacing="0" binding="{/InformationCollection}"
+		class="sapUiSmallMargin" defaultSpan="XL5 L5 M5 S12" defaultIndent="XL1 L1 M1">
+		<Title level="H2" titleStyle="H2" text="Products">
+			<layoutData>
+				<l:GridData span="XL12 L12 M12 S12" indent="XL0 L0 M0" />
+			</layoutData>
+		</Title>
+		<Image src="{3/ProductPicUrl2}" desityAware="false" width="100%">
+			<layoutData>
+				<l:GridData moveForward="M6" />
+			</layoutData>
+		</Image>
+		<Image src="{1/ProductPicUrl}" desityAware="false" width="100%">
+			<layoutData>
+				<l:GridData moveBackwards="M6" />
+			</layoutData>
+		</Image>
+	</l:Grid>
+
+	<l:Grid binding="{/InformationCollection}" hSpacing="0"
+		defaultSpan="XL3 L5 M5 S12" class="sapUiSmallMargin">
+		<Image src="{2/ProductPicUrl}" densityAware="false" width="100%">
+			<layoutData>
+				<l:GridData indent="XL1 L1 M1"/>
+			</layoutData>
+		</Image>
+		<l:VerticalLayout class="sapUiTinyMargin">
+			<Text text="{0/Description1}" class="sapUiTinyMarginBottom"/>
+			<Text text="{0/Description2}" />
+		</l:VerticalLayout>
+		<Image src="{1/ProductPicUrl2}" densityAware="false" width="100%">
+			<layoutData>
+				<l:GridData linebreakXL="false" linebreakL="true"
+					visibleOnMedium="false" visibleOnSmall="true" indent="L1"/>
+			</layoutData>
+		</Image>
+	</l:Grid> -->
 
 	<!-- <mvc:XMLView viewName="com.dla.webstat.view.statistics.Heatmap" id="heatmap"/> -->
 	<!-- <mvc:XMLView viewName="com.dla.webstat.view.statistics.Bar"/>  -->
