added code to fix formatting on heatmap list control

--- a/view/Start.view.xml
+++ b/view/Start.view.xml
@@ -21,8 +21,18 @@
 					<l:GridData span="L12 M12 S12" />
 				</layoutData>
 			</StandardListItem>
-			<wt:HeatmapListControl 	title="Job 15"
-				description="Payroll" />
+			<wt:HeatmapListControl 
+				title="Sex By Age"
+			>
+			</wt:HeatmapListControl>
+			<wt:HeatmapListControl />
+			<wt:HeatmapListControl />
+			<wt:HeatmapListControl />
+			<wt:HeatmapListControl />
+			<wt:HeatmapListControl />
+			<wt:HeatmapListControl />
+		
+		
 			<!-- <StandardListItem
 				title="Job 15"
 				description="Payroll" />
