--- a/view/Start.view.xml
+++ b/view/Start.view.xml
@@ -19,7 +19,10 @@
 					<l:GridData span="L12 M12 S12" />
 				</layoutData>
 			</StandardListItem>
-			<wt:TrendListControl  />
+			<wt:TrendListControl items="{
+						list: [{name : 'Hits', value: 2222211},
+								{name: 'Users', value: 32222}]
+					}" />
 			<wt:BarCharListControl title="Bar Graph" />
 			<wt:HeatmapListControl title="Heatmap" />
 			<wt:LineChartListControl title="Line Chart" />
